--- a/CBayMobileApp/Views/Home/RecentEarning.xaml
+++ b/CBayMobileApp/Views/Home/RecentEarning.xaml
@@ -5,26 +5,29 @@
              BackgroundColor="White"
              Title="Recent Earnings">
 
-    <CollectionView ItemsSource="{Binding Transaction}" Margin="20">
+
+    <CollectionView ItemsSource="{Binding WalletTransaction}" Margin="20">
         <CollectionView.ItemsLayout>
             <GridItemsLayout VerticalItemSpacing="0" HorizontalItemSpacing="10" Orientation="Vertical"/>
         </CollectionView.ItemsLayout>
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <StackLayout>
-                    <Label Text="{Binding newDate}" FontSize="14" TextColor="#000000" FontAttributes="Bold" FontFamily="Poppins-Medium"/>
+                    <!--<Label Text="{Binding newDate}" FontSize="14" TextColor="#000000" FontAttributes="Bold" FontFamily="DMSans-Medium"/>-->
 
-                    <FlexLayout JustifyContent="SpaceBetween" VerticalOptions="Center">
+                    <FlexLayout JustifyContent="SpaceBetween" VerticalOptions="Center" Margin="0,5">
                         <StackLayout Orientation="Horizontal" Spacing="10">
-                            <Image Source="{Binding PlusImage}"/>
+                            <Image Source="{Binding TransImage}"/>
 
                             <StackLayout>
-                                <Label Text="{Binding description}" FontSize="14" TextColor="#333333" FontAttributes="Bold"/>
-                                <Label Text="{Binding time}" FontSize="14" TextColor="#333333"  FontFamily="Poppins-Medium"/>
+                                <Label Text="{Binding narration}" FontSize="14" TextColor="#333333" FontAttributes="Bold"/>
+                                <Label Text="{Binding newDate}" FontSize="14" TextColor="#333333"  FontFamily="Poppins-Medium"/>
                             </StackLayout>
                         </StackLayout>
                         <StackLayout Orientation="Horizontal" Spacing="2">
-                            <Label Text="{Binding amount}" FontSize="15" TextColor="#333333" FontAttributes="Bold" FontFamily="Poppins-Medium"/>
+                            <Label Text="₦" FontSize="15" TextColor="{Binding SubColor}" FontAttributes="Bold"/>
+                            <Label Text="{Binding Amount}" FontSize="15" TextColor="{Binding SubColor}" FontAttributes="Bold" FontFamily="Poppins-Medium"/>
+                            <Label Text=".00" FontSize="15" TextColor="{Binding SubColor}" FontAttributes="Bold" FontFamily="Poppins-Medium"/>
                         </StackLayout>
 
                     </FlexLayout>
@@ -41,12 +44,12 @@
 
             </DataTemplate>
         </CollectionView.ItemTemplate>
-        <!--<CollectionView.EmptyView>
-                    <StackLayout VerticalOptions="Center"  HorizontalOptions="Center">
-                        <Image Source="blank3.png" HeightRequest="70" VerticalOptions="Center" HorizontalOptions="Center"/>
-                        <Label  Margin="0,4,0,0" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold">No transaction found</Label>
-                    </StackLayout>
-                </CollectionView.EmptyView>-->
+        <CollectionView.EmptyView>
+            <StackLayout VerticalOptions="Center"  HorizontalOptions="Center">
+                <Image Source="blank3.png" HeightRequest="70" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Label  Margin="0,4,0,0" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold">No transaction found</Label>
+            </StackLayout>
+        </CollectionView.EmptyView>
     </CollectionView>
 
 </ContentPage>
