--- a/CBayMobileApp/Views/Identity/ForgotPasswordPage.xaml
+++ b/CBayMobileApp/Views/Identity/ForgotPasswordPage.xaml
@@ -37,7 +37,7 @@
             <Controls:CustomEntry 
                     FontFamily="Rubik-Regular"
                     FontSize="16"
-                    Text="{Binding Username}"
+                    Text="{Binding UserName}"
                     Placeholder="shuaibabdulbakie@gmail.com"
                     TextColor="Black"/>
             <Line X1="0"
