--- a/CBayMobileApp/Views/Order/MyOrder.xaml
+++ b/CBayMobileApp/Views/Order/MyOrder.xaml
@@ -32,7 +32,7 @@
 
         <RefreshView IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}" Command="{Binding RefreshCommand}" RefreshColor="{StaticResource PrimaryColor}" Grid.Row="1">
             <Grid  Margin="0,10">
-                <CollectionView x:Name="pending"  ItemsSource="{Binding GetAllOrder}" IsVisible="{Binding ShowAllOrder}">
+                <CollectionView x:Name="pending"  ItemsSource="{Binding GetAllOrder}" >
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout VerticalItemSpacing="10" HorizontalItemSpacing="10" Orientation="Vertical"/>
                     </CollectionView.ItemsLayout>
@@ -46,7 +46,7 @@
                                     <Frame CornerRadius="50" BackgroundColor="{StaticResource PrimaryColor}" HasShadow="False" Padding="3">
                                     </Frame>
                                     <StackLayout VerticalOptions="CenterAndExpand">
-                                        <Label Text="{Binding orderID}"
+                                        <Label Text="{Binding orderNo}"
                                                FontFamily="Rubik-Regular"
                                                FontSize="14"
                                                Margin="0,0,0,0"
